# Copyright (c) 2021-2024 breeze256 <18980896953@163.com>

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

# Project infos
[tool.poetry]
name = "breeze256_github_io"
version = "0.1.0"
description = "The repository for my Blog. Made with MkDocs."
authors = ["breeze256"]
readme = "README.md"
# packages = [{include = "breeze256"}]

# Requirements for core
[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "~3.0"
click = "~8.1"
mergedeep = "~1.3"
pyyaml_env_tag = "~0.1"
markdown = "~3.6"
ghp-import = "~2.1.0"
packaging = "~24.0"
mkdocs = "~1.6"
mkdocs-material = "~9.5"
mkdocs-material-extensions = "~1.3"
pygments = "~2.16"
pymdown-extensions = "~10.2"

# Requirements for plugins
babel = "~2.10"
colorama = "~0.4"
paginate = "~0.5"
regex = "^2022.4"
requests = "2.26"
pathspec = "~0.12.1"

# Mirrors
[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
